<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_SBGaugeReadingsOp" Id="{ebf512b5-0f6b-409e-b8c4-a238edda22c0}">
    <Declaration><![CDATA[(* What operations should be used to compare gauge status *)
TYPE ST_SBGaugeReadingsOp :
STRUCT
	eDPPiraniOp : E_GaugeCompOp; // LXLHN:DP:GPI
	eDPColdCathodeOp : E_GaugeCompOp; // LXLHN:DP:GCC
	ePumpStationPirani1Op : E_GaugeCompOp; // LXLHN:PP:GPI:1
	ePumpStationPirani2Op : E_GaugeCompOp; // LXLHN:PP:GPI:2
	ePumpStationColdCathodeOp : E_GaugeCompOp; // LXLHN:PP:GCC
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>